--- a/style.css
+++ b/style.css
@@ -298,7 +298,7 @@
     }
 }
 
-@media screen and (max-width:800px) {
+/* @media screen and (max-width:800px) {
     .home-secton {
         height: 170vh;
     }
@@ -310,7 +310,7 @@
     .home-secton {
         height: 170vh;
     }
-}
+} */
 
 #top-cards {
     margin-top: 30px;
