--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@
 
 .dropdown li {
     color: white;
-    background-color: ;
+    
 }
 
 .home {
@@ -298,23 +298,11 @@
     }
 }
 
-/* @media screen and (max-width:800px) {
-    .home-secton {
-        height: 170vh;
-    }
-
-
-}
-
-@media screen and (max-width:550px) {
-    .home-secton {
-        height: 170vh;
-    }
-} */
 
 #top-cards {
     margin-top: 30px;
     font-family: 'Roboto Slab', serif;
+   
 
 }
 
@@ -402,4 +390,11 @@
 #bannerbtn button:hover{
     background-color: navy;
     border: none;
+}
+@media (max-width:400px){
+    .card-img-overlay{
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
 }
