--- a/style.css
+++ b/style.css
@@ -391,10 +391,11 @@
     background-color: navy;
     border: none;
 }
-@media (max-width:700px){
+@media screen and  (max-width:700px){
     .card-img-overlay{
         align-items: center;
         justify-content: center;
         text-align: center;
+        margin-top: 70px;
     }
 }
