--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@
     position: relative;
     z-index: 0;
     font-family: 'Roboto Slab', serif;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
     text-align: center;
 }
 
@@ -212,6 +212,8 @@
     width: 70%;
     height: 600px;
     margin-left: 100px;
+    margin-top: 30px;
+    margin-bottom: 20px;
     
 }
 
@@ -248,8 +250,8 @@
 }
 
 .content #shopnow:hover {
-    background-color: rgba(0, 128, 0, 0.769);
-    color: white;
+    /* background-color: rgba(0, 128, 0, 0.769); */
+    /* color: rgb(28, 18, 228); */
 }
 
 @media screen and (max-width:800px) {
@@ -265,7 +267,19 @@
     }
 
     .content #shopnow {
-        margin-left: 50px;
+        display: flex;
+    justify-content: center;
+    margin: auto;
+    text-decoration: none;
+    margin-top: 30px;
+    width: 200px;
+    height: 30px;
+    color: rgb(245, 245, 248);
+    letter-spacing: 3px;
+    font-weight: bold;
+    background: transparent;
+    /* border: 2px solid navy; */
+    transition: 0.5s ease;
     }
 
 }
@@ -286,7 +300,20 @@
     }
 
     .content #shopnow {
-        margin-left: 100px;
+        display: flex;
+    justify-content: center;
+    margin: auto;
+    text-decoration: none;
+    /* margin-top: 30px; */
+    width: 200px;
+    height: 32px;
+    /* color: navy; */
+    letter-spacing: 2px;
+    font-weight: bold;
+    /* background: transparent; */
+    /* border: 2px solid navy; */
+    transition: 0.5s ease;
+    background-color: green;
 
 
     }
@@ -357,18 +384,19 @@
 }
 
 .banner {
-    width: 100%;
-    height: 40vh;
     margin-top: 50px;
-    background-image: url(./images/banner1.jpeg);
+    background-image: url(./images/banner001.jpeg);
     background-size: cover;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     text-align: center;
+    max-width: 100%;
+    height: auto;
 }
 
 .banner .content {
     text-align: center;
-    padding-top: 100px;
+    padding-top: 80px;
+    padding-bottom: 40px;
 
 }
 
@@ -406,4 +434,46 @@
         text-align: center;
         margin-top: 70px;
     }
+}
+#product-cards{
+    font-family: 'Roboto Slab', serif;
+margin-top: 100px;
+}
+#product-cards .card{
+    box-shadow: rgba(100,100,111,0.2) 0px 7px 29px 0px ;
+}
+#product-cards img{
+    border-radius: 10px;
+}
+#product-cards h3{
+    letter-spacing: 3px;
+    font-size: 30px;
+    text-shadow: 1px 1px 1px black;
+    font-weight: bold;
+}
+#product-cards h5 span{
+    float: right;
+    color: navy;
+}
+#viewmorebtn{
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    text-decoration: none;
+    margin-top: 30px;
+    width: 200px;
+    height: 32px;
+    color: navy;
+    letter-spacing: 5px;
+    font-weight: bold;
+    background: transparent;
+    border: 2px solid navy;
+    transition: 0.5s ease;
+}
+#viewmorebtn:hover{
+    background-color: navy;
+    color: white;
+}
+.star span{
+    color: rgb(255,187,0);
 }
