--- a/style.css
+++ b/style.css
@@ -385,7 +385,7 @@
 
 .banner {
     margin-top: 50px;
-    background-image: url(./images/banner001.jpeg);
+    background-image: url(./images/banner1.jpeg);
     background-size: cover;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     text-align: center;
@@ -714,4 +714,47 @@ html {
     #side2 input{
         width: 200px;
     }
+}
+.banner2 {
+    margin-top: 50px;
+    background-image: url(./images/banner001.jpeg);
+    background-size: cover;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-align: center;
+    max-width: 100%;
+    height: auto;
+}
+
+.banner2 .content2 {
+    text-align: center;
+    padding-top: 80px;
+    padding-bottom: 40px;
+
+}
+
+.banner2 .content2 h1 {
+    color: white;
+    text-shadow: 1px 1px 1px black;
+    letter-spacing: 3px;
+}
+
+.banner2 .content2 p {
+    color: white;
+    text-shadow: 1px 1px 1px black;
+    letter-spacing: 3px;
+
+}
+
+#bannerbtn2 button {
+    width: 150px;
+    height: 38px;
+    background: transparent;
+    color: white;
+    border: 2px solid white;
+    transition: 0.5s ease;
+}
+
+#bannerbtn2 button:hover {
+    background-color: #0474BC;
+    border: none;
 }
