--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 
 .top-icons i {
     font-size: 25px;
-    color: black;
+    color: #040484;
     margin-left: 10px;
 }
 
@@ -31,7 +31,7 @@
 }
 
 .other-links i {
-    color: black;
+    color: #040484;
     font-size: 20px;
     margin-left: 10px;
 }
@@ -236,22 +236,23 @@
 
 .content p {
     margin-left: 70px;
-    color: navy;
+    color: #0474BC;
 }
 
 .content #shopnow {
     margin-left: 70px;
     width: 200px;
     height: 38px;
-    border: 2px solid rgba(0, 128, 0, 0.769);
+    border: 2px solid #0474BC;
     font-weight: bold;
     transition: 0.5s ease;
 
 }
 
 .content #shopnow:hover {
-    /* background-color: rgba(0, 128, 0, 0.769); */
-    /* color: rgb(28, 18, 228); */
+    background-color: #0474BC;
+    color: white;
+    border: 2px solid white;
 }
 
 @media screen and (max-width:800px) {
@@ -489,8 +490,11 @@
 
 #offer {
     margin-top: 50px;
-
+    /* justify-content: center;
+    align-items: center; */
+    text-align: center;
 }
+
 
 #offer i {
     font-size: 60px;
@@ -624,7 +628,7 @@ html {
 }
 
 #side1 {
-    background-color:#0474BC;
+    background-color: #0474BC;
     height: 76vh;
     border-radius: 5px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
@@ -685,36 +689,42 @@ html {
     align-items: center;
 
 }
-#side2 p{
+
+#side2 p {
     margin-top: 20px;
 
 }
-#side2 .icons i{
+
+#side2 .icons i {
     margin-left: 10px;
 }
 
-#login{
+#login {
     margin-top: 10px;
 }
-#login button{
+
+#login button {
     width: 200px;
     height: 32px;
     color: white;
-    background:#0474BC;
+    background: #0474BC;
     border: none;
     font-weight: bold;
 
 }
-@media screen and (max-width:992px){
-    #side2 input{
+
+@media screen and (max-width:992px) {
+    #side2 input {
         width: 300px;
     }
 }
-@media screen and (max-width:330px){
-    #side2 input{
+
+@media screen and (max-width:330px) {
+    #side2 input {
         width: 200px;
     }
 }
+
 .banner2 {
     margin-top: 50px;
     background-image: url(./images/banner001.jpeg);
@@ -723,6 +733,7 @@ html {
     text-align: center;
     max-width: 100%;
     height: auto;
+    background-color: white;
 }
 
 .banner2 .content2 {
@@ -757,4 +768,64 @@ html {
 #bannerbtn2 button:hover {
     background-color: #0474BC;
     border: none;
+}
+
+#about {
+    margin-top: 50px;
+}
+
+#about h1 {
+    text-align: center;
+    font-weight: bold;
+    color: #0474BC;
+}
+
+#contact {
+    margin-top: 50px;
+}
+
+#contact h1 {
+    color: #0474BC;
+    text-shadow: 0px 0px 1px black;
+}
+
+#contact .card {
+    height: 80px;
+    margin-top: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+}
+
+#contact .card i {
+    margin-top: 10px;
+    margin-left: 10px;
+    font-size: 15px;
+    color: #0474BC;
+    font-weight: bold;
+    letter-spacing: 3px;
+
+}
+
+#contact .card h6 {
+    margin-left: 10px;
+    margin-top: 10px;
+    letter-spacing: 3px;
+    font-weight: bold;
+    color: #0474BC;
+}
+
+#messagebtn button {
+    margin-top: 30px;
+    width: 200px;
+    height: 33px;
+    background: transparent;
+    border: 2px solid #0474BC;
+    font-weight: bold;
+    letter-spacing: 3px;
+    transition: 0.5s ease;
+}
+
+#messagebtn button:hover {
+    background-color: #0474BC;
+    color: white;
 }
