--- a/style.css
+++ b/style.css
@@ -357,7 +357,7 @@
 
 #top-cards .card img {
     height: 50vh;
-    opacity: .5;
+    /* opacity: .5; */
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     text-align: center;
     border-radius: 8px;
@@ -375,14 +375,14 @@
     height: 33px;
     font-weight: bold;
     letter-spacing: 3px;
-    /* background-color: navy; */
     background: transparent;
-    color: #0474BC;
-    border: 2px solid #0474BC;
+    color:white;
+    border: 2px solid white;
     transition: 0.5s ease;
     justify-content: center;
     align-items: center;
     border-radius: 5px;
+    margin-top: 16.5rem;
 }
 
 #top-cards button:hover {
